<resources>
    <string name="app_name">Visita\'m</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_titulo">Nombre usuario</string>
    <string name="nav_header_subtitulo">correo_usuario@android.com</string>
    <string name="nav_header_foto_usuario">Foto usuario</string>
    <string name="action_configuracion">Configuración</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_lista">Lista</string>
    <string name="menu_mapa">Mapa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_crear">Nuevo</string>
    <string name="label_nombre">Nombre monumento:</string>
    <string name="label_numPol">NumPol:</string>
    <string name="label_codVia">CodVia:</string>
    <string name="label_telefono">Teléfono:</string>
    <string name="label_ruta">Ruta:</string>
    <string name="label_coodenada">Coordenadas:</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_guardar">Guardar</string>
    <string name="monumento_crear_titulo">Nuevo monumento</string>
    <string name="monumento_editar_titulo">Editar monumento</string>
    <string name="monumento_crear_confirmacion">Confirmación</string>
    <string name="monumento_editar_confirmacion">Monumento modificado</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_guardar">Guardar</string>
    <string name="menu_cancelar">Cancelar</string>
    <string name="monumento_eliminar_titulo">Eliminar monumento</string>
    <string name="monumento_eliminar_mensaje">¿Seguro que quieres elliminar el monumento?</string>
    <string name="monumento_eliminar_confirmacion">Monumento eliminado</string>
    <string name="action_gestion_monumentos">Gestionar monumentos</string>
    <string name="titulo">Visita\'m</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_clima">Clima</string>
    <string name="menu_transporte">Transporte</string>
    <string name="menu_estadiscitas">Estadísticas</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="label_latitud">Latitud:</string>
    <string name="label_longitud">Longitud:</string>
    <string name="label_img">Imagen:</string>
    <string name="boton_acceder">Acceder</string>
    <string name="registrarme">Registrarme</string>
    <string name="buscar_monumento">Buscar monumento</string>
    <string name="salir">Salir</string>
    <string name="pregunta_salir">¿Desea salir de la aplicación?</string>
    <string name="senyal_gps">Señal GPS</string>
    <string name="mensage_senyal_gps">Su señal GPS no está activada. ¿Quiere activarla ahora?</string>
    <string name="registro">Registro</string>
    <string name="email_registro">Correo electrónico</string>
    <string name="nombre_registro">Nombre</string>
    <string name="apellidos_registro">Apellidos</string>
    <string name="contrasenya_registro">Contraseña</string>
    <string name="repite_contrasenya_registro">Repite contraseña</string>
    <string name="btn_registrarse">REGISTRARSE</string>
    <string name="btn_ya_tengo_una_cuenta">YA TENGO UNA CUENTA</string>

    <string name="facebook_application_id" translatable="false">322503412532826</string>
    <string name="facebook_login_protocol_schema" translatable="false">fb322503412532826</string>
    <string name="title_activity_mapa">Map</string>

</resources>