<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lista"
            android:icon="@drawable/ic_baseline_list"
            android:title="@string/menu_lista" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_baseline_map"
            android:title="@string/menu_mapa" />
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_favoritos" />
        <item
            android:id="@+id/nav_clima"
            android:icon="@drawable/ic_baseline_wb_sunny_24"
            android:title="@string/menu_clima" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/menu_opcion01"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_configuracion" />
        <item
            android:id="@+id/menu_opcion02"
            android:icon="@drawable/ic_baseline_close"
            android:title="@string/menu_cerrar_sesion" />
    </group>
</menu>
