<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyecto_android.fragments.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.proyecto_android.fragments.ListaFragment"
        android:label="@string/menu_lista"
        tools:layout="@layout/fragment_lista" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.proyecto_android.fragments.MapaFragment"
        android:label="@string/menu_mapa"
        tools:layout="@layout/fragment_mapa" />
    <activity
        android:id="@+id/inicioActivity"
        android:name="com.example.proyecto_android.activitys.InicioActivity"
        android:label="activity_inicio"
        tools:layout="@layout/activity_inicio" />
</navigation>