<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.GestionMonumentosActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activitys.GestionMonumentosActivity">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/label_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nombre"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_nombre"
                android:layout_alignParentLeft="true"
                android:ems="10" />

            <TextView
                android:id="@+id/label_numPol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nombre"
                android:layout_marginTop="20dp"
                android:text="@string/label_numPol"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/numPol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_numPol"
                android:layout_alignParentLeft="true"
                android:ems="10"
                android:inputType="textMultiLine"></EditText>

            <TextView
                android:id="@+id/label_codVia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/numPol"
                android:layout_marginTop="20dp"
                android:text="@string/label_codVia"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/codVia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_codVia"
                android:layout_alignParentLeft="true"
                android:ems="10"></EditText>

            <TextView
                android:id="@+id/label_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/codVia"
                android:layout_marginTop="20dp"
                android:text="@string/label_telefono"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_telefono"
                android:layout_alignParentLeft="true"
                android:ems="10"
                android:inputType="phone"></EditText>

            <TextView
                android:id="@+id/label_ruta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/telefono"
                android:layout_marginTop="20dp"
                android:text="@string/label_ruta"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/ruta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_ruta"
                android:layout_alignParentLeft="true"
                android:ems="10"
                android:inputType="phone"></EditText>

            <TextView
                android:id="@+id/label_coordenada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ruta"
                android:layout_marginTop="20dp"
                android:text="@string/label_coodenada"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/coordenada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_coordenada"
                android:layout_alignParentLeft="true"
                android:ems="10"
                android:inputType="phone"></EditText>

            <LinearLayout
                android:id="@+id/botonera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/coordenada"
                android:layout_alignParentStart="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp">

                <Button
                    android:id="@+id/boton_cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boton_cancelar" />

                <Button
                    android:id="@+id/boton_guardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boton_guardar" />
            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>
</ScrollView>